Better alignment for action keys, with a bug.

--- a/client/styles/editor.less
+++ b/client/styles/editor.less
@@ -116,6 +116,17 @@
     }
   }
 
+  .actionItem {
+    overflow: auto;
+    width: 100%;
+  }
+
+  .actionName {
+    float: left;
+  }
+  .actionKey {
+    float: right;
+  }
 }
 
 #editorContainer {
